[project]
name = "mcp-hitsz-jw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
    "lxml>=5.4.0",
    "mcp[cli]>=1.9.1",
    "openai>=1.82.0",
    "pyexecjs>=1.5.1",
    "requests>=2.32.3",
]
